<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="button1_name">Spotify Streamer</string>
    <string name="button2_name">Scores App</string>
    <string name="button3_name">Library App</string>
    <string name="button4_name">Build it Bigger</string>
    <string name="button5_name">XYZ Reader</string>
    <string name="button6_name">Capstone: My Own App</string>
</resources>
